--- a/DynamicBoard.Application/Views/Shared/Error.cshtml
+++ b/DynamicBoard.Application/Views/Shared/Error.cshtml
@@ -9,7 +9,7 @@
         <div class="row">
 
             <div class="chart-container" style="position: relative; height:50vh; width:80vw">
-                <p style="font-display:inherit ; color:red">" @Model   </p>
+                <p style="font-display:inherit ; color:red"> @Model   </p>
  </p>
             </div>
         </div>
